--- a/src/main/resources/templates/customerCenter/inquiry-write.html
+++ b/src/main/resources/templates/customerCenter/inquiry-write.html
@@ -34,6 +34,7 @@
                     </div>
                 </header>
             
+
                     <div class="inquiry-content-layout">
                         <main class="inquiry-content-container">
                             <section role="log" class="inquiry-content-wrap">
@@ -42,22 +43,30 @@
                                         <div class="inquiry-content">
                                             <div class="inquiry-container">
                                                 <div tabindex="0" class="inquiry-layout">
+                                                    <div style="display: flex; display: flex; width: 97%; justify-content: space-between;">
+                                                        <div class="inquiry-service-time">평일 09:00 ~ 18:00 운영</div>
+
+                                                     <!-- 현재시각 -->
+                                                         <div class="inquiry-currentTime">오전 4:28</div>
+                                                    </div>
+                                                         <div class="inquiry-title-one">심봉사 — 당신의 마음이 한 사람의 빛을 만듭니다</div>
+
                                                     <div size="96" class="inquiry-logo-wrap">
                                                         <img width="96" height="96" src="../../static/image/logo-white.jpg">
                                                     </div>
 
                                                     <div class="inquiry-title-container">
-                                                        <div class="inquiry-title-one">심봉사 — 당신의 마음이 한 사람의 빛을 만듭니다</div>
+                                                        <!-- <div class="inquiry-title-one">심봉사 — 당신의 마음이 한 사람의 빛을 만듭니다</div> -->
                                                              <div class="inquiry-answer-time-layout">
                                                                 <div name="chat-error-filled" size="14" class="inquiry-answer-item"></div>
                                                                     <div class="inquiry-answer">보통 수십 분 내 답변</div>
                                                             </div>
-                                                            <div class="inquiry-service-time">평일 09:00 ~ 18:00 운영</div>
+                                                            <!-- <div class="inquiry-service-time">평일 09:00 ~ 18:00 운영</div> -->
                                                     </div>
                                                 </div>
                                                  
                                                 <!-- 현재시각 -->
-                                                <div class="inquiry-currentTime">오전 4:28</div>
+                                                <!-- <div class="inquiry-currentTime">오전 4:28</div> -->
 
                                                 <!-- 컨텐츠 -->
                                                     <form>
@@ -116,4 +125,8 @@
  
     
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    
+</script>
 </html>
