--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -21,19 +21,47 @@
                 <div class="content-container">
                     <div class="content-layout">
                         <div class="work-detail-info-container">
-                        <!-- 지원하기 버튼 -->
-                        <div class="work-detail-info-top-btn-layout">
-                            <button type="button" class="apply-btn" id="" title="신청하기">
-                                <span>신청하기</span>
-                            </button>
-                        </div>
-                            <h3 class="work-detail-info-title">
+                              <div class="work-detail-board-layout">
+                                <div class="work-detail-list-btn-wrap">
+                                        <div style="justify-content: center; display: flex; margin: 16px; ">
+                                                <button type="button" class="list-btn" id="" name="">
+                                                    <span>목록</span>
+                                                </button>
+                                        </div>
+                                    
+                                        <a class="work-list-prev-btn board_prev" id="board_prev">
+                                            <img src="https://www.1365.go.kr/web/vols/images/ico/ico_board_btn_prev.png" alt="이전글 표시">이전글
+                                            <span class="">이전글이 없습니다.</span>
+                                        </a>
+                                    
+                                    
+                                        <a href="" class="work-detail-list-next-btn next-btn" id="board_next" onclick="">
+                                            다음글
+                                            <img src="https://www.1365.go.kr/web/vols/images/ico/ico_board_btn_next.png" alt="다음글 표시">
+                                            <span class="">우크라이나 &amp; 튀르키예 &amp; 시리아 긴급구호 물품지원 선별 분류 작업</span>
+                                        </a>
                                 
-                                사전연명의료의향서 상담 및 작성 업무 [오후]
-                                <!-- <input type="hidden" id="" value="사전연명의료의향서 상담 및 작성 업무 [오후]"> -->
-                                <em class="em">(모집중)</em>
-                            </h3>
-                            
+                                </div>
+                            </div>
+                            <!-- <div class="work-detail-info-top-btn-layout">
+                                <button type="button" class="apply-btn" id="" title="신청하기">
+                                    <span>신청하기</span>
+                                </button>
+                            </div> -->
+                            <div class="work-detail-info-top-btn-layout" style="display: flex; width: 97.6%; justify-content: space-between;">
+                                <!-- <h3 class="work-detail-info-title"> -->
+                                    <span class="work-detail-info-title"> 사전연명의료의향서 상담 및 작성 업무 [오후]
+                                        <!-- <input type="hidden" id="" value="사전연명의료의향서 상담 및 작성 업무 [오후]"> -->
+                                        <em class="em">(모집중)</em>
+                                    </span>
+                                    <!-- 지원하기 버튼 -->
+                                    <!-- <div class="work-detail-info-top-btn-layout"> -->
+                                        <button type="button" class="apply-btn" id="" title="신청하기" >
+                                            <span>신청하기</span>
+                                        </button>
+                                        <!-- </div> -->
+                                 <!-- </h3> -->
+                            </div>
                             <div class="detail-info-data-wrap">
                                 <div class="group">
                                     <dl>
@@ -380,7 +408,7 @@
                                         </dl>
                                         <dl class="tel">
                                             <dt>전화번호 :</dt>
-                                            <dd>010-5121-3284</dd>
+                                            <dd>010-5555-5555</dd>
                                         </dl>
                                        <!--  <dl class="fax">
                                             <dt>FAX :</dt>
@@ -394,7 +422,7 @@
                             </div>
                         </div>
 
-                        <div class="work-detail-board-layout">
+                        <!-- <div class="work-detail-board-layout">
                             <div class="work-detail-list-btn-wrap">
                                <div style="justify-content: center; display: flex;">
                                     <button type="button" class="list-btn" id="btnList" name="btnList">
@@ -416,7 +444,7 @@
                                 
                                 
                             </div>
-                        </div>
+                        </div> -->
                             
                             
                     </div>
