--- a/src/main/resources/templates/volunteer-work/work.html
+++ b/src/main/resources/templates/volunteer-work/work.html
@@ -69,37 +69,15 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
+                                   
                                 </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
                     <!--  -->
                     <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
+                       
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
@@ -112,37 +90,14 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
                                 </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
                     <!--  -->
                     <div>
-                        <!-- <div class="service-items">
-                            <div class="service-items-wrapper">
-                                <div class="service-items-content">
-                                    <div class="name">심봉사(SimBongSa)</div>
-                                    <div class="title">서울시 환경정화 봉사자 모집</div>
-                                    <div class="dates">
-                                        <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
-                                    </div>
-                                    <div class="dates">
-                                        <span class="dates-text">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
-                                    </div>
-                                </div>
-                                <div class="items-buttons">
-                                    <span class="cruit">모집중</span>
-                                    <a class="button">지원 ></a>
-                                </div>
-                            </div>
-                        </div> -->
+                       
                         <div class="service-items">
                             <div class="service-items-wrapper">
                                 <div class="service-items-content">
@@ -155,14 +110,8 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
                                 </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -181,14 +130,9 @@
                                         <span class="dates-text">[모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
+                                   
                                 </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
@@ -207,14 +151,9 @@
                                             [모집기간] 2023-04-19 ~ 2023-04-30</span>
                                         <span class="dates-text-work">[봉사기간] 2023-05-01 ~ 2023-05-30</span>
                                     </div>
-                                    <!-- <div class="dates">
-                                    </div> -->
+                                    
                                 </div>
-                                <div class="last-dates">
-                                     마감<br> 
-                                        <span>3</span>
-                                    일전
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
@@ -223,15 +162,21 @@
             </div>
             <div>
                 <div class="paging" style="text-align: center">
-                  <a class="changePage" style="color: black"><code>&lt;</code></a>
-                  <code id="currentPage" class="currentPage">1</code>
-                    <a class="changePage" style="color: black" }"=""><code>2</code></a>
-                  <a class="changePage" style="color: black"><code>&gt;</code></a>
+                    <a class="changePrev" style="color: black">
+                        <code>&lt;</code>
+                    </a>
+                    <code id="currentPage" class="currentPage">1</code>
+                    <a class="changePage" style="color: black">
+                        <code>2</code>
+                    </a>
+                    <a class="changeNext" style="color: black">
+                        <code>&gt;</code>
+                    </a>
                 </div>
-                <form name="pageForm">
+                <!-- <form name="pageForm">
                   <input type="hidden">
                   <input type="hidden">
-                </form>
+                </form> -->
             </div>
             <div class="service-help">
                 <p>마지막 정보 수정 : 2023-04-19</p>
