--- a/src/main/resources/static/css/volunteer-work/work.css
+++ b/src/main/resources/static/css/volunteer-work/work.css
@@ -64,7 +64,7 @@ div{
 }
 
 .main-container{
-    margin: 24%;
+    margin: 27%;
     margin-top: 1%;
     margin-bottom: 3%;
 
@@ -339,6 +339,7 @@ a{
     margin: 15px;
     margin-top: 50px;
 }
+
 .changePage{
     display: inline-block;
     padding: 5px 10px;
@@ -352,6 +353,7 @@ a{
     text-decoration: none;
     cursor: pointer;
 }
+
 .currentPage{
     color: #fff;
     background-color: rgb(248, 100, 83);
@@ -360,6 +362,7 @@ a{
     margin-right: 5px;
     border-radius: 3px;
     border: 1px solid rgb(248, 100, 83);
+    cursor: pointer;
 }
 
 .select-region {
@@ -376,3 +379,38 @@ a{
     margin-right: 3px;
     outline: none;
 }
+
+.changePrev {
+    display: inline-block;
+    padding: 5px 10px;
+    margin-right: 7px;
+    border-radius: 4px;
+    color: rgb(248, 100, 83);
+    background-color: #fff;
+    font-family: inherit;
+    transition: background-color 0.2s ease-in-out;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.changeNext {
+    display: inline-block;
+    padding: 5px 10px;
+    margin-right: 7px;
+    border-radius: 4px;
+    color: rgb(248, 100, 83);
+    background-color: #fff;
+    font-family: inherit;
+    transition: background-color 0.2s ease-in-out;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.changePrev code {
+    font-weight: bold;
+}
+
+.changeNext code {
+    font-weight: bold;
+}
+
