--- a/src/main/resources/templates/customerCenter/inquiry-write.html
+++ b/src/main/resources/templates/customerCenter/inquiry-write.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문의하기</title>
-    <link rel="stylesheet" href="../static/font/font.css">
-    <link rel="stylesheet" href="../../static/css/customerCenter/inquiry-write.css">
+    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="/static/css/customerCenter/inquiry-write.css">
 </head>
 <body>
 
@@ -52,9 +52,9 @@
                                                      <!-- 현재시각 -->
                                                          <div id="" class="inquiry-currentTime">
                                                             <span id="clock"> 4:28 </span>
-                                                            <span id="apm"> ampm</span>
+                                                            <span id="apm" style="padding-left: 4px;"> ampm</span>
                                                         </div>
-                                                   
+                                                  
                                                     </div>
                                                          <div class="inquiry-title-one">심봉사 — 당신의 마음이 한 사람의 빛을 만듭니다</div>
 
