--- a/src/main/resources/static/css/support/support-rice-modal.css
+++ b/src/main/resources/static/css/support/support-rice-modal.css
@@ -9,7 +9,7 @@ body {
 .support-rice-layout {
     position: relative;
     width: 339px;
-    height: 180px;
+    height: 182px;
     background-color: white;
     margin: 0 auto;
     border-radius: 8px;
@@ -18,7 +18,6 @@ body {
 }
 
 .suppport-rice-container {
-    /* position: absolute; */
     width: 220px;
     height: 28px;
     margin-top: 23rem;
@@ -29,13 +28,11 @@ body {
 
 .suppport-rice-container input{
     outline: none;
-    /* border: 1px solid #b6b4b4; */
     width: 100%;
     height: 100%;
-    /* border-radius: 5px; */
     border: none;
     border-bottom: 1px solid #b6b4b4;
-    margin: 51px 51px 0px 59px;
+    margin: 10px 51px 0px 59px;
     padding: 5px;
     
 }
@@ -53,10 +50,7 @@ input::placeholder {
     font-weight: bold;
 
 }
-/* .suppport-rice-container div {
-    position: absolute;
-    top: 7px;
-} */
+
 
 .suppport-rice-container em {
     color: rgb(248, 100, 83);
@@ -69,10 +63,9 @@ input::placeholder {
     position: relative;
     float: right;
     padding-top: 1rem;
-    /* padding-right: 9rem; */
     width: 339px;
     height: 48px;
-    
+    cursor: pointer;
 }
 
 .support-pay-layout button {
@@ -83,12 +76,32 @@ input::placeholder {
     color: rgb(248, 100, 83);
     background-color: white;
     padding-top: 10px;
-    cursor: pointer;
-
 }
 
 .support-pay-layout span {
     font-size: 17px;
     font-weight: bold; 
     font-style: normal;
+}
+
+.support-rice-close-btn-layout {
+    width: 34px;
+    height: 36px;
+    position: relative;
+    float: right;
+    
+}
+
+.support-rice-close-btn-layout button {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    left: 119px;
+    font-size: 15px;
+    font-weight: bold;
+
 }
