--- a/src/main/resources/templates/volunteer-work/work-apply-modal.html
+++ b/src/main/resources/templates/volunteer-work/work-apply-modal.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-    <!-- <button>신청하기</button> -->
+    <button id="work-open">봉사 신청하기</button>
        
-    <div class="apply-layout">
+    <div class="apply-layout" style="display: none;">
         <div class="apply-container">
             <div class="apply-layer">
                 <p class="apply-title">자원봉사자참여신청</p>
@@ -85,4 +85,7 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="../../static/js/volunteer-work/work-apply-modal.js"></script>    
+
 </html>
